--- a/local_eat/web/src/index.html
+++ b/local_eat/web/src/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
 
